package Decorateur.Shapes;

public class Circle implements Shape {

    @Override
    public void draw() {
       System.out.println("Shape: draw Circle");
    }
 }