package Decorateur.Shapes;
public class Rectangle implements Shape {

    @Override
    public void draw() {
       System.out.println("Shape: draw Rectangle");
    }
 }