package Decorateur.Shapes;

public interface Shape {
    void draw();
 }